k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3 # 3 replicas as visualized in the diagram
  selector:
    matchLabels: # Should match with template.metadata.labels
      component: web # Deployment will manage this component
  template:
    metadata:
      labels: 
        component: web
    spec:
      containers:
        - name: client 
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000
