k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # Only 1 just like Redis. 
  selector:
    matchLabels:
      component: postgres 
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-pvc-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers: 
        - name: postgres 
          image: postgres #To be fetched from Dockerhub
          ports:
            - containerPort: 5432 # Default 
          volumeMounts:
            - name: postgres-pvc-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
