k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment 
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: server 
  template:
    metadata:
      labels:
        component: server
    spec: # Customizes the behavior of each pod created
      containers:
        - name: server
          image: stephengrider/multi-server # Requires env variables
          ports:
            - containerPort: 5000
