k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # To begin with. Will scale eventually
  selector:
    matchLabels:
      component: worker # Worker container in our app
  template:
    metadata:
      # For every pod that gets created
      labels:
        component: worker 
    spec:
      containers: 
        - name: worker
          image: stephengrider/multi-worker
