k8s/postgres-clusterip-service.yml
apiVersion: v1 
kind: Service
metadata: 
  name: postgres-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: postgres  
  ports:
    - port: 5432 
      targetPort: 5432
