k8s/redis-cluster-ipservice.yml
apiVersion: v1
kind: Service 
metadata:
  name: redis-clusterip-service 
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 # Access on Port 6379 and let it stick
      targetPort: 6379 # Access inside the container
