k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: server-cluster-ip-service
spec: # Customizes how this service behaves
  type: ClusterIP
  selector: # Implies which types of pod the ClusterIP to be attached to
    component: server 
  ports:
    - port: 5000 # For the Express API
      targetPort: 5000
