k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta1 #Updated API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # So that no 404 errors occur
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # Regex enabled
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
